<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="continue_text" tools:ignore="MissingTranslation">Continue</string>
    <string name="create" tools:ignore="MissingTranslation">Create</string>
    <string name="do_not" tools:ignore="MissingTranslation">Do not</string>
    <string name="permission_app_settings">App settings</string>
    <string name="permission_grant">Grant</string>
    <string name="update_later">Later</string>
    <string name="update_none">Kuroba is up-to-date</string>
    <string name="update_check_failed">Failed to check for updates.</string>
    <string name="update_install">Install</string>
    <string name="update_install_downloading">Downloading update</string>
    <string name="update_install_download_failed">Download failed</string>
    <string name="update_install_download_move_failed">Failed to move downloaded file to the Download directory.</string>
    <string name="update_retry_title">Retry update</string>
    <string name="update_retry">Kuroba was not updated yet. Tap \"retry\" to retry the install.</string>
    <string name="update_retry_button">retry</string>
    <string name="update_storage_permission_required_title">Storage permission required</string>
    <string name="update_storage_permission_required">
"Permission to access storage is required for installing the update.

Re-enable this permission in the app settings if you permanently disabled it."</string>
    <string name="storage_permission_required_to_export_settings" tools:ignore="MissingTranslation">
"Permission to access storage is required to export settings.

Re-enable this permission in the app settings if you permanently disabled it."</string>
    <string name="storage_permission_required_to_import_settings" tools:ignore="MissingTranslation">
"Permission to access storage is required to import settings.

Re-enable this permission in the app settings if you permanently disabled it."</string>
    <string name="minutes" tools:ignore="MissingTranslation">%d minutes</string>
    <plurals name="posts">
        <item quantity="one">%d post</item>
        <item quantity="other">%d posts</item>
    </plurals>
    <plurals name="reply">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <plurals name="image">
        <item quantity="one">%d image</item>
        <item quantity="other">%d images</item>
    </plurals>
    <plurals name="board">
        <item quantity="one">%d board</item>
        <item quantity="other">%d boards</item>
    </plurals>
    <plurals name="type">
        <item quantity="one">%d type</item>
        <item quantity="other">%d types</item>
    </plurals>
    <plurals name="bookmark">
        <item quantity="one">%d bookmark</item>
        <item quantity="other">%d bookmarks</item>
    </plurals>
    <plurals name="filter">
        <item quantity="one">%d filter</item>
        <item quantity="other">%d filters</item>
    </plurals>
    <plurals name="site">
        <item quantity="one">%d site</item>
        <item quantity="other">%d sites</item>
    </plurals>
    <string name="card_stats">%1$dR %2$dI</string>
    <string name="action_reload">Reload</string>
    <string name="action_pin">Bookmark</string>
    <string name="action_open_browser">Open in a browser</string>
    <string name="action_share">Share</string>
    <string name="action_download_album">Download album</string>
    <string name="action_transparency_toggle" tools:ignore="MissingTranslation">Toggle opacity</string>
    <string name="action_image_rotate_cw" tools:ignore="MissingTranslation">Rotate image CW</string>
    <string name="action_image_rotate_ccw" tools:ignore="MissingTranslation">Rotate image CCW</string>
    <string name="action_search">Search</string>
    <string name="action_search_image">Image search</string>
    <string name="action_switch_catalog">Catalog mode</string>
    <string name="action_switch_board">Board mode</string>
    <string name="action_scroll_to_top" tools:ignore="MissingTranslation">Top</string>
    <string name="action_scroll_to_bottom" tools:ignore="MissingTranslation">Bottom</string>
    <string name="action_sort" tools:ignore="MissingTranslation">Sort</string>
    <string name="action_rename_pin">Rename bookmark</string>
    <string name="action_rename">Rename</string>
    <string name="action_reply">Reply</string>
    <string name="open_link_not_matched">Kuroba cannot open this link; it will open in your browser instead.</string>
    <string name="order_bump">Bump order</string>
    <string name="order_reply">Reply count</string>
    <string name="order_image">Image count</string>
    <string name="order_newest">Newest</string>
    <string name="order_oldest">Oldest</string>
    <string name="order_modified" tools:ignore="MissingTranslation">Latest reply</string>
    <string name="order_activity" tools:ignore="MissingTranslation">Thread activity</string>
    <string name="search_hint">Search</string>
    <string name="search_results">Found %1$s for \"%2$s\"</string>
    <string name="search_empty">Search subjects, comments, names and filenames</string>
    <string name="open_link_confirmation">Open this link?</string>
    <string name="open_thread_confirmation">Open this thread?</string>
    <string name="open_link_failed">No applications were found to open this link</string>
    <string name="action_confirm_exit_title">Confirm exit</string>
    <string name="thumbnail_load_failed_network">Error</string>
    <string name="thumbnail_load_failed_server" translatable="false">404</string>
    <string name="image_preview_failed">Failed to show image</string>
    <string name="image_preview_failed_oom">Failed to show image, out of memory</string>
    <string name="image_failed_big_image">Failed to show image, deep-zoom loading failed</string>
    <string name="image_not_found">Image not found</string>
    <string name="image_open_failed">Failed to open image</string>
    <string name="image_spoiler_filename">Spoiler image</string>
    <string name="thread_boards_search_hint">Search</string>
    <string name="thread_load_failed_ssl">HTTPS error</string>
    <string name="thread_load_failed_network">Network error</string>
    <string name="thread_load_failed_parsing">API parse error</string>
    <string name="thread_load_failed_server">Server error</string>
    <string name="thread_load_failed_not_found">404 not found</string>
    <string name="thread_refresh_bar_inactive">Tap to refresh</string>
    <string name="thread_refresh_now">Loading</string>
    <string name="thread_refresh_countdown">Loading in %1$ds</string>
    <string name="thread_load_failed_retry">Retry</string>
    <string name="thread_archived">Archived</string>
    <string name="thread_closed">Closed</string>
    <string name="thread_page_no" tools:ignore="MissingTranslation">Page</string>
    <plurals name="thread_new_posts">
        <item quantity="one">%d new post</item>
        <item quantity="other">%d new posts</item>
    </plurals>
    <string name="thread_new_posts_goto">View</string>
    <string name="thread_empty_select">Please select a thread</string>
    <string name="thread_up_down_hint">Scroll to top/bottom</string>
    <string name="thread_pin_hint">Bookmark this thread</string>
    <string name="thread_view_archive">Archive</string>
    <string name="thread_show_archives" tools:ignore="MissingTranslation">Archives</string>
    <string name="thread_empty_setup_feature" translatable="false">&#128564;</string>
    <string name="thread_empty_setup_title">Nothing to show</string>
    <string name="thread_empty_setup_body">Add a site to begin browsing</string>
    <string name="thread_empty_setup_hint">Add a site here</string>
    <string name="setup_sites_title">Setup sites</string>
    <string name="setup_sites_empty">No sites added</string>
    <string name="setup_sites_add_hint">Add a site here</string>
    <string name="setup_sites_add_title">Add site</string>
    <string name="setup_sites_description">Add a site by its URL or name</string>
    <string name="setup_sites_site_description">%s added</string>
    <string name="setup_sites_add_boards_hint">Tap to add boards</string>
    <string name="setup_site_title">Configure %s</string>
    <string name="setup_site_group_general">General</string>
    <string name="setup_site_boards">Setup boards</string>
    <string name="setup_site_boards_description">%s added</string>
    <string name="setup_site_group_login">Authentication</string>
    <string name="setup_site_login">Login</string>
    <string name="setup_site_login_description_enabled">Logged in</string>
    <string name="setup_site_login_description_disabled">Off</string>
    <string name="setup_board_title">Configure boards of %s</string>
    <string name="setup_board_empty">No boards added</string>
    <string name="setup_board_removed">Removed \"%s\"</string>
    <string name="setup_board_added">%s added</string>
    <string name="setup_board_select_all">Select all</string>
    <string name="filter_summary_all_boards">All boards</string>
    <string name="filter_enabled">Enabled</string>
    <string name="filter_filter">Filter</string>
    <string name="filter_action">Action</string>
    <string name="filter_pattern">Pattern</string>
    <string name="filter_match_test">Test the pattern</string>
    <string name="filter_pattern_hint_regex">Pattern</string>
    <string name="filter_boards">Boards</string>
    <string name="filter_types">Types</string>
    <string name="filter_type_string_matching">String matching</string>
    <string name="filter_type_regex_matching">Regex matching</string>
    <string name="filter_all">all</string>
    <string name="filter_hide">Hide post</string>
    <string name="filter_color">Highlight post</string>
    <string name="filter_remove">Remove post</string>
    <string name="filter_watch" tools:ignore="MissingTranslation">Watch post</string>
    <string name="filter_invalid_pattern">Invalid pattern</string>
    <string name="filter_preview">Test your filter</string>
    <string name="filter_no_matches">Does not match</string>
    <string name="filter_matches">Matches</string>
    <string name="filter_color_pick">Pick color</string>
    <string name="filter_help_title">Filter help</string>
    <string name="reply_name">Name</string>
    <string name="reply_options">Options</string>
    <string name="reply_subject">Subject</string>
    <string name="reply_file_name">File name</string>
    <string name="reply_spoiler_image">Spoiler image</string>
    <string name="reply_submit">Submit</string>
    <string name="reply_comment_button_quote" translatable="false">&gt;</string>
    <string name="reply_comment_button_spoiler">[s]</string>
    <string name="setting_pass_token">Token</string>
    <string name="setting_pass_pin">PIN</string>
    <string name="setting_pass_authenticated">Device authorized!</string>
    <string name="image_options_remove_filename" tools:ignore="MissingTranslation">Remove filename</string>
    <string name="image_options_change_image_checksum" tools:ignore="MissingTranslation">Change image checksum</string>
    <string name="image_options_fix_exif" tools:ignore="MissingTranslation">Fix EXIF orientation</string>
    <string name="image_options_remove_metadata" tools:ignore="MissingTranslation">Remove metadata</string>
    <string name="image_options_re_encode" tools:ignore="MissingTranslation">Re-encode</string>
</resources>