<?xml version="1.0" encoding="utf-8"?><!--
Clover - 4chan browser https://github.com/Floens/Clover/
Copyright (C) 2014  Floens

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:baselineAligned="false"
    android:minHeight="124dp"
    android:orientation="horizontal"
    tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:baselineAligned="false"
        android:minHeight="124dp"
        android:orientation="horizontal"
        tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#fff44336"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/name_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/reply_name"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/options"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/reply_options"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </LinearLayout>
            <Button
                android:id="@+id/sage_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:text="@string/reply_sage_button"
                android:textAllCaps="false"
                android:textSize="15dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reply_subject"
                android:inputType="textCapSentences|textAutoCorrect"
                android:singleLine="true"
                android:textSize="16sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.floens.chan.ui.view.SelectionListeningEditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:imeActionLabel="@string/reply_submit"
                    android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                    android:maxLines="6"
                    android:minHeight="107dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/comment_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:paddingRight="8dp"
                    android:textColor="?text_color_secondary"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/comment_buttons"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="SpUsage">

                <Button
                    android:id="@+id/comment_quote"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_quote"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/comment_spoiler"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_spoiler"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/spoiler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reply_spoiler_image"
                android:textSize="14sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <TextView
                android:id="@+id/preview_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reply_file_name"
                android:singleLine="true"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/more"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/attach"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp" />

            <ImageView
                android:id="@+id/submit"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="6dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
