<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/errors"
            android:textColor="#fff44336"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <org.floens.chan.ui.view.CrossfadeView
            android:id="@+id/crossfade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_token"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/setting_pass_token"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/input_pin"
                    android:inputType="numberPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/setting_pass_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/authenticated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#dd000000"
                android:textSize="20sp"
                android:text="@string/setting_pass_authenticated" />

        </org.floens.chan.ui.view.CrossfadeView>

        <Button
            android:id="@+id/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bottom_description"
            android:textColor="#dd000000"
            android:textSize="14sp"
            android:paddingTop="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
